basic background done

--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
     <title>basic_synth</title>
   </head>
   <body>
-    <section id="app" class="container">
+    <div id="app">
+      <section id="synthUI">
 
-    </section>
+
+        <div id='keyboard'>
+          <div class="upper-row">
+            
+          </div>
+          <div class="lower-row">
+
+          </div>
+        </div>
+      </section>
+
+
+    
+
+
+
+
+    <footer id="footer">
+
+    </footer>
+
+    </div>
   </body>
 </html>
