added keyboard (static)

--- a/index.html
+++ b/index.html
@@ -12,11 +12,87 @@
 
 
         <div id='keyboard'>
-          <div class="upper-row">
-            
-          </div>
-          <div class="lower-row">
+          <div class="row">
+              <div class="col-1">
+                
+              </div>
+              <div class="col-1">
+                <div id='csharp_key' class="key black"><span>W</span></div>
+              </div>
+              <div class="col-1">
 
+              </div>
+              <div class="col-1">
+                <div id='dsharp_key' class="key black"><span>E</span></div>
+              </div>
+              <div class="col-3">
+
+              </div>
+              <div class="col-1">
+                <div id='fsharp_key' class="key black"><span>T</span></div>
+              </div>
+              <div class="col-1">
+
+              </div>
+              <div class="col-1">
+                <div id='gsharp_key' class="key black"><span>Y</span></div>
+              </div>
+              <div class="col-1">
+
+              </div>
+              <div class="col-1">
+                  <div id='asharp_key' class="key black"><span>U</span></div>
+              </div>
+              <div class="col-3">
+
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-1">
+                <div id='c_key' class="key white"><span>A</span></div>
+              </div>
+              <div class="col-1">
+  
+              </div>
+              <div class="col-1">
+                  <div id='d_key' class="key white"><span>S</span></div>
+              </div>
+              <div class="col-1">
+  
+              </div>
+              <div class="col-1">
+                  <div id='e_key' class="key white"><span>D</span></div>
+              </div>
+              <div class="col-1">
+  
+              </div>
+              <div class="col-1">
+                  <div id='f_key' class="key white"><span>F</span></div>
+              </div>
+              <div class="col-1">
+  
+              </div>
+              <div class="col-1">
+                  <div id='g_key' class="key white"><span>G</span></div>
+              </div>
+              <div class="col-1">
+  
+              </div>
+              <div class="col-1">
+                  <div id='a_key'class="key white"><span>H</span></div>
+              </div>
+              <div class="col-1">
+  
+              </div>
+              <div class="col-1">
+                  <div id='b_key' class="key white"><span>J</span></div>
+              </div>
+              <div class="col-1">
+  
+              </div>
+              <div class="col-1">
+                  <div id='c2_key' class="key white"><span>K</span></div>
+              </div>
           </div>
         </div>
       </section>
