--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
   <body>
     <div id="app">
       <section id="synthUI">
-
+        <div id="controlPanel">
+          <div id='control1'>
+            <span class='switch'></span><span class='switch'></span><span class='switch'></span><span class='switch'></span>
+            <input type='range'>
+            <input type='range'>
+          </div>
+          <div id='control2'>
+            <span class="knob"></span><span class="knob"></span>
+            <input type='range'>
+          </div>
+          <div id='control3'>
+            <div id='dbMeter'></div>
+          </div>
+          <div id='control4'>
+            <div id='speaker'><img src='./images/speaker.png'></div>
+          </div>
+          
+        </div>
 
         <div id='keyboard'>
           <div class="row">
