kinda working knobs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           </div>
           <div id='control2'>
             <div class="knobs">
-                <div class="knob" data-value='0'><span class='indicator'></span></div><div class="knob" data-value='0'><span class='indicator'></span></div>
+                <div class="knob" id='chorus' data-val='0'><span class='indicator'></span></div>
+                <div class="knob" id='reverb' data-val='0'><span class='indicator'></span></div>
             </div>
             
             <input type='range' id='filter' class='slider' min='100' max='10000' value='10000'> 
