info text added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <title>basic_synth</title>
   </head>
   <body>
@@ -153,19 +153,25 @@
     <div id="info" class='hidden'>
       <section class="inner-container">
           <div class='text-container'>
-              <h1>ELKO TU BĘDZIE INFO</h1>
+              <h1>basic_synth</h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dignissimos reiciendis excepturi voluptatibus deleniti amet accusamus sapiente aut harum nostrum quo, minus veritatis impedit ex odio iusto in, fugit fugiat animi unde cupiditate hic cum eveniet ipsum! Quaerat, ducimus vitae!
+                this basic synthesizer is made with jquery and tone.js library - it was made as a final project for coderslab bootcamp that i've attended. you can use it by pressing keys on your keyboard, as labeled on the UI, that correspond to actual musical notes, and tweak the synth controls using your mouse. 
+                <p>the upper-left series of switches change the presets of the oscillator - including basic waveshape and ADSR envelope shape. the sliders underneath it adjust the attack and decay/release phases of the envelope.</p>
+                <p>you can use the two big knobs in the middle of the UI by hovering over them with your mouse and using your scroll wheel. they will change your chorus and reverb settings, accordingly. and finally, the one last slider underneath them is basically your low-pass filter control. </p>
+              </p>
+              <h1>about me</h1>
+              <p>
+                my name is antoni and i like doing a lot of stuff - including making music and programming, hence the idea of making interactive web synth in JS. if you like it, check out my other stuff. if you don't - at least check out my music!
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas qui earum dicta maiores doloremque ipsa repellendus beatae porro dignissimos deserunt, ipsum tempora nulla! Natus reprehenderit vel rem exercitationem? Assumenda autem at iusto ratione, repudiandae saepe aut? Repudiandae consequatur enim totam. Accusamus tempore nobis ipsum fugit velit, eum molestiae iure aspernatur? Itaque debitis porro aut quo similique error labore eveniet magni quidem maxime facere voluptas rem, dolore aliquam cupiditate quia hic aperiam optio voluptatem quas vel consectetur corrupti modi. Perferendis, quis quibusdam. Pariatur hic quibusdam fugiat commodi natus architecto. Recusandae suscipit esse earum eos quasi ad voluptatibus, a nisi? Natus, atque!
+
               </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur aut, hic doloremque ex autem molestias, corporis, distinctio doloribus itaque quis numquam! Reprehenderit molestiae maiores commodi voluptas suscipit iusto, aspernatur quo eum earum corporis. Dicta voluptatibus, recusandae quas deleniti blanditiis incidunt unde explicabo iusto et itaque natus nesciunt. Blanditiis, facere nulla.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore molestiae eum facere ullam eveniet ea obcaecati earum cupiditate repellendus dignissimos.
-              </p>
+              <div class="icons">
+                <a href='https://github.com/antonisierakowski'><img src='images/github.png' alt='github logo'></a>
+                <a><img src='images/linkedin.png' alt='linkedin logo'></a>
+                <a href='https://soundcloud.com/sieraque'><img src='images/soundcloud.png' alt='soundcloud logo'></a>
+              </div>
+
           </div>
       </section>
 
