--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <div class="icons">
                 <a href='https://github.com/antonisierakowski'><img class='icon' src='images/github.png' alt='github logo'></a>
                 <a><img class='icon' src='images/linkedin.png' alt='linkedin logo'></a>
-                <a class='icon' href='https://soundcloud.com/sieraque'><img src='images/soundcloud.png' alt='soundcloud logo'></a>
+                <a href='https://soundcloud.com/sieraque'><img class='icon' src='images/soundcloud.png' alt='soundcloud logo'></a>
               </div>
 
           </div>
